--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <preference name="orientaion" value="portrait">
-<link rel="stylesheet" href="css/themes/default/rtl.jquery.mobile-1.4.0.css" />
-<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
-<script type="text/javascript" src="js/rtl.jquery.mobile-1.4.0.js"></script>
+<link rel="stylesheet" href="/css/themes/default/rtl.jquery.mobile-1.4.0.css" />
+<script type="text/javascript" src="/js/jquery-1.11.1.min.js"></script>
+<script type="text/javascript" src="/js/rtl.jquery.mobile-1.4.0.js"></script>
 
 <style>
 #page {
@@ -691,7 +691,7 @@ border: 1px solid #649ecc;
 <div class="ui-grid-b" id="mainGrid">
 <div class="ui-block-a" id="block01">
         <a href="#pagetwo" class="ui-btn" data-transition="flow" style="box-shadow:inset 0 0 0 2px #ffffff; border-radius: 10px; background: rgba(100, 158, 204, 1);border: 1px solid rgba(100, 158, 204, 2);">
-        <img src="imgs/Town.png" height="100" width="100"/></a>أخبار العليوات
+        <img src="/imgs/Town.png" height="100" width="100"/></a>أخبار العليوات
     
 </div>
 <div class="ui-block-b" id="block02">
