--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@ border: 1px solid #649ecc;
 <div class="ui-grid-b" id="mainGrid">
 <div class="ui-block-a" id="block01">
         <a href="#pagetwo" class="ui-btn" data-transition="flow" style="box-shadow:inset 0 0 0 2px #ffffff; border-radius: 10px; background: rgba(100, 158, 204, 1);border: 1px solid rgba(100, 158, 204, 2);">
-        <img src="Town.png" height="100" width="100"/></a>أخبار العليوات
+        <img src="town.png" height="100" width="100"/></a>أخبار العليوات
     
 </div>
 <div class="ui-block-b" id="block02">
