--- a/index.html
+++ b/index.html
@@ -751,7 +751,7 @@ border: 1px solid #649ecc;
   <div id="head" data-role="header" data-position="fixed" data-theme="b" style="height:50px; border: 1px solid rgba(100, 158, 204, 0);">
 <h3>أخبار العليوات</h3>
 
-    <a href="../" data-icon="home" data-transition="flow" data-iconpos="notext" data-ajax="false">الرئيسية</a>
+    <a href="index.html" data-icon="home" data-transition="flow" data-iconpos="notext" data-ajax="false">الرئيسية</a>
   </div>
 <div data-role="main" class="ui-content">
     
@@ -766,7 +766,7 @@ border: 1px solid #649ecc;
   <div id="head" data-role="header" data-position="fixed" data-theme="b" style="height:50px; border: 1px solid rgba(100, 158, 204, 0);">
     <h3>رياضة</h3>
 
-    <a href="../" data-icon="home" data-transition="flow" data-iconpos="notext" data-ajax="false">الرئيسية</a>
+    <a href="index.html" data-icon="home" data-transition="flow" data-iconpos="notext" data-ajax="false">الرئيسية</a>
  
 
   </div>
