--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 <title>Mobile application</title>
@@ -766,7 +766,7 @@ border: 1px solid #649ecc;
   <div id="head" data-role="header" data-position="fixed" data-theme="b" style="height:50px; border: 1px solid rgba(100, 158, 204, 0);">
     <h3>رياضة</h3>
 
-    <a href="index.html" data-icon="home" data-transition="flow" data-iconpos="notext" data-ajax="false">الرئيسية</a>
+    <a href="window.location=window.location.pathname + "#" + h.getPrev().url;" data-icon="home" data-transition="flow" data-iconpos="notext" data-ajax="false">الرئيسية</a>
  
 
   </div>
