--- a/index.html
+++ b/index.html
@@ -766,16 +766,8 @@ border: 1px solid #649ecc;
   <div id="head" data-role="header" data-position="fixed" data-theme="b" style="height:50px; border: 1px solid rgba(100, 158, 204, 0);">
     <h3>رياضة</h3>
 
-<<<<<<< HEAD
-<<<<<<< HEAD
-    <a href="javascript:window.back();" data-icon="home" data-transition="flow" data-iconpos="notext" data-ajax="false">الرئيسية</a>
-=======
-    <a href="window.history.back();" data-icon="home" data-transition="flow" data-iconpos="notext" data-ajax="false">الرئيسية</a>
->>>>>>> origin/master
-=======
-    <a href="window.history.back();" data-icon="home" data-transition="flow" data-iconpos="notext" data-ajax="false">الرئيسية</a>
->>>>>>> origin/master
- 
+
+  <a href="javascript:window.history.back();" data-icon="home" data-transition="flow" data-iconpos="notext" data-ajax="false">الرئيسية</a>
 
   </div>
 <div data-role="main" class="ui-content">
