--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@ border: 1px solid #649ecc;
 <div class="ui-grid-b" id="mainGrid">
 <div class="ui-block-a" id="block01">
         <a href="#pagetwo" class="ui-btn" data-transition="flow" style="box-shadow:inset 0 0 0 2px #ffffff; border-radius: 10px; background: rgba(100, 158, 204, 1);border: 1px solid rgba(100, 158, 204, 2);">
-        <img src="town.png" height="100" width="100"/></a>أخبار العليوات
+        <img src="Town.png" height="100" width="100"/></a>أخبار العليوات
     
 </div>
 <div class="ui-block-b" id="block02">
@@ -751,7 +751,7 @@ border: 1px solid #649ecc;
   <div id="head" data-role="header" data-position="fixed" data-theme="b" style="height:50px; border: 1px solid rgba(100, 158, 204, 0);">
 <h3>أخبار العليوات</h3>
 
-    <a href="index.html" data-icon="home" data-transition="flow" data-iconpos="notext" data-ajax="false">الرئيسية</a>
+    <a href="javascript:window.history.back();" data-icon="home" data-transition="flow" data-iconpos="notext" data-ajax="false">الرئيسية</a>
   </div>
 <div data-role="main" class="ui-content">
     
@@ -783,7 +783,7 @@ border: 1px solid #649ecc;
   <div id="head" data-role="header" data-position="fixed" data-theme="b" style="height:50px; border: 1px solid rgba(100, 158, 204, 0);">
     <h3>العالم من حولنا</h3>
 
-    <a href="../" data-icon="home" data-transition="flow" data-iconpos="notext" data-ajax="false">الرئيسية</a>
+    <a href="javascript:window.history.back();" data-icon="home" data-transition="flow" data-iconpos="notext" data-ajax="false">الرئيسية</a>
  
 
   </div>
@@ -800,7 +800,7 @@ border: 1px solid #649ecc;
   <div id="head" data-role="header" data-position="fixed" data-theme="b" style="height:50px; border: 1px solid rgba(100, 158, 204, 0);">
     <h3>عالم حواء</h3>
 
-    <a href="../" data-icon="home" data-transition="flow" data-iconpos="notext" data-ajax="false">الرئيسية</a>
+    <a href="javascript:window.history.back();" data-icon="home" data-transition="flow" data-iconpos="notext" data-ajax="false">الرئيسية</a>
  
 
   </div>
@@ -817,7 +817,7 @@ border: 1px solid #649ecc;
   <div id="head" data-role="header" data-position="fixed" data-theme="b" style="height:50px; border: 1px solid rgba(100, 158, 204, 0);">
     <h3>صحة</h3>
 
-    <a href="../" data-icon="home" data-transition="flow" data-iconpos="notext" data-ajax="false">الرئيسية</a>
+    <a href="javascript:window.history.back();" data-icon="home" data-transition="flow" data-iconpos="notext" data-ajax="false">الرئيسية</a>
  
 
   </div>
@@ -834,7 +834,7 @@ border: 1px solid #649ecc;
   <div id="head" data-role="header" data-position="fixed" data-theme="b" style="height:50px; border: 1px solid rgba(100, 158, 204, 0);">
     <h3>نافذة التقنية</h3>
 
-    <a href="../" data-icon="home" data-transition="flow" data-iconpos="notext" data-ajax="false">الرئيسية</a>
+    <a href="javascript:window.history.back();" data-icon="home" data-transition="flow" data-iconpos="notext" data-ajax="false">الرئيسية</a>
  
 
   </div>
@@ -851,7 +851,7 @@ border: 1px solid #649ecc;
   <div id="head" data-role="header" data-position="fixed" data-theme="b" style="height:50px; border: 1px solid rgba(100, 158, 204, 0);">
     <h3>آداب وفنون</h3>
 
-    <a href="../" data-icon="home" data-transition="flow" data-iconpos="notext" data-ajax="false">الرئيسية</a>
+    <a href="javascript:window.history.back();" data-icon="home" data-transition="flow" data-iconpos="notext" data-ajax="false">الرئيسية</a>
  
 
   </div>
@@ -868,7 +868,7 @@ border: 1px solid #649ecc;
   <div id="head" data-role="header" data-position="fixed" data-theme="b" style="height:50px; border: 1px solid rgba(100, 158, 204, 0);">
     <h3>أخبار عاجلة</h3>
 
-    <a href="../" data-icon="home" data-transition="flow" data-iconpos="notext" data-ajax="false">الرئيسية</a>
+    <a href="javascript:window.history.back();" data-icon="home" data-transition="flow" data-iconpos="notext" data-ajax="false">الرئيسية</a>
  
 
   </div>
@@ -885,7 +885,7 @@ border: 1px solid #649ecc;
   <div id="head" data-role="header" data-position="fixed" data-theme="b" style="height:50px; border: 1px solid rgba(100, 158, 204, 0);">
     <h3>توظيف</h3>
 
-    <a href="../" data-icon="home" data-transition="flow" data-iconpos="notext" data-ajax="false">الرئيسية</a>
+    <a href="javascript:window.history.back();" data-icon="home" data-transition="flow" data-iconpos="notext" data-ajax="false">الرئيسية</a>
  
 
   </div>
