--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@ border: 1px solid #649ecc;
   <div id="head" data-role="header" data-position="fixed" data-theme="b" style="height:50px; border: 1px solid rgba(100, 158, 204, 0);">
 
 
-<h3>صندوق العليوات الخيري</h3>
+<h3>العليوات</h3>
   </div>
 <marquee direction="right" scrollamount=4 width="100%" >عناوين الأخبار</marquee>
 
